[package]
name = "rusty-coin-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wallet"
path = "src/lib.rs"

[dependencies]
crypto-hash = "0.3.3"
primitive-types = "0.11.1"
secp256k1 = { version = "0.24.0", features = ["global-context", "rand"] }
rand = { version = "0.8.5", features = ["std"] }
sha256 = "1.0.3"
ripemd = "0.1.1"
bs58 = "0.4.0"